2004-09-06  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/define-grobs.scm (all-grob-descriptions): unset
	threshold. This fixes morgenlied. 

	* scm/page-layout.scm (ly:optimal-page-breaks): whoops. Thinko in
	rod calculation.

	* lily/system.cc (get_line): don't take piano-pedal & dynamic line
	spanners into account for staff-extents.

	* lily/ottava-bracket.cc (print): take common refpoint of dots
	into account as well.

2004-09-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/lookup.cc (triangle): translate by interval.

	* VERSION (PACKAGE_NAME): release 2.3.14

	* Documentation/user/changing-defaults.itely (Page layout): add
	betweensystempadding

	* scm/page-layout.scm (ly:optimal-page-breaks): typo.

	* input/regression/quote-cyclic.ly (Module): new file.

	* scm/lily.scm (print): add function.

	* scm/music-functions.scm (quote-substitute): new
	function. Substitute \quote when putting music into \score.

	* input/regression/key-signature-cancellation.ly (Module): new file.

	* lily/*.cc: more ly_scm2 -> scm_to converions.

	* lily/key-signature-interface.cc (print): take position
	difference into account when spacing naturals.

	* lily/key-engraver.cc (create_key): create KeyCancellation grob
	separately, so the cancellation can be put before the staff-bar

	* scm/define-grobs.scm (all-grob-descriptions): add a
	KeyCancellation grob.

	* lily/tuplet-engraver.cc (struct Tuplet_description): new
	struct. Use to clean-up Tuplet_engraver

2004-09-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/*: ly_scm2int -> scm_to_int
	ly_scm2double -> scm_to_double

	* lily/include/lily-guile.hh (scm_from_double): more compat glue.

2004-09-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/simple-spacer.cc (LY_DEFINE): return something sensible for
	0 springs

	* lily/system.cc (post_processing): 

	* scm/page-layout.scm (ly:optimal-page-breaks): implement uniform
	density for vertical spacing by means of force penalty.
	